--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 #comment
-# file export-ignore
+resources/** export-ignore
+.gitattributes export-ignore
+.gitignore export-ignore
+CHANGELOG.md export-ignore
